--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-file-viewer": "^0.5.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^1.2.1",
     "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
   },
